kubernetes/apps/base/tools/affine/ingress.yaml
# Affine Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: tools
  labels:
    app.kubernetes.io/name: affine
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - affine.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: affine.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  number: 80
